Changes in version 1.5 (... 2008)

 - Added support for read-only locking of textures. Can speed up those calls.

 - Added support for locking RTTs under OpenGL.

 - Implementation of UserData events from system events.

 - ICameraSceneNode::setIsOrthogonal replaced by a parameter to setProjectionMatrix.

 - All meshbuffers are now dynamically allocated to avoid problems with grabbed buffers, which may be deleted before the last drop happens (due to static memory allocation).

 - Enhanced scene graph traversal with example from rogerborg.

 - FPS camera disabling of event receiver works better now.

 - scene deserialization allows for a user defined callback after a new scene node is created.

 - Fixed tangent mesh loading from .irrmesh files.

 - OpenGL clamp modes are now properly set.

 - transformMesh renamed to transform, also supports meshbuffers now.

 - vector3d::rotationToDirection added.

 - New mesh generators for cone and cylinder.

 - Hardware accelerated Vertex and Index Buffer support finally integrated into Irrlicht. Thanks to a resource handling idea by Klasker and the almost immediate implementation by Luke, Irrlicht now supports VBOs under OpenGL and D3D.
   Hardware buffers make rendering the same vertices much faster. To use this feature with a mesh, simply set a usage type via MeshBuffer->setHardwareMappingHint(scene::EHM_STATIC). The driver will upload the vertices and indices on the next draw and reuse this information without the need to upload it each frame.
   Vertex and Index buffers can also be updated separately, which is e.g. useful for the terrain node's LOD.

 - Changed FBO creation according to Nadro's patch. Seems to have zbuffer problems currently.

 - Update to libpng 1.2.29

 - Compiler flag for PerfHUD support added.

 - recalculateNormals and tangent space creation enhancements by ryanclark.

 - Added getColorFormat methods for device and driver, returning the color format of the device's window and the driver's framebuffer.
